--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.9.3",
+    "@graphql-tools/schema": "^10.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
+    "graphql": "^16.8.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.0",
     "http": "^0.0.1-security",
-    "nodemon": "^3.0.1"
+    "mongoose": "^7.5.1",
+    "nodemon": "^3.0.1",
+    "ws": "^8.14.1"
   }
 }
